rust/verified-anchor-macros/tests/ui/unsupported_constraint.rs
use verified_anchor::VerifiedAccounts;

#[derive(VerifiedAccounts)]
struct Bad {
    #[account(realloc = 8)]
    vault: u8,
}

fn main() {}
